tests/scan/fixtures/validation/negative/clean_rubygems_typosquat_unique/lib/zzz_marker_rubygems_negative.rb
module ZzzMarkerRubygemsNegative
  VERSION = '1.0.0'
end
